<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/profile_settings">
        <Preference
            android:icon="@drawable/baseline_person_24"
            app:key="user_profile"
            app:title="@string/change_profile"
            app:useSimpleSummaryProvider="true" />
        <Preference
            android:icon="@drawable/baseline_lock_24"
            app:key="change_password"
            app:title="@string/change_password"
            app:useSimpleSummaryProvider="true" />
        <Preference
            android:icon="@drawable/baseline_language_24"
            app:key="Change_Language"
            app:title="@string/change_language" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/help">
        <Preference
            android:icon="@drawable/ic_baseline_policy_24"
            app:key="terms_and_conditions"
            app:title="@string/privacy_policy" />

        <Preference
            android:icon="@drawable/baseline_email_24"
            app:key="ask_a_question"
            app:title="@string/ask_a_question" />
        <PreferenceCategory
            app:title="@string/about">
            <EditTextPreference
                android:enabled="false"
                app:key="app_version"
                app:summary="Version 1.0"
                app:title="App Version" />
        </PreferenceCategory>
    </PreferenceCategory>
</PreferenceScreen>