<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Language">

    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/tv_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language" />

    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/rg_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_english"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/english"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_amharic"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/amharic"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/rb_oromo"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/oromic"
            android:layout_weight="1" />
    </RadioGroup>

    <TextView
        android:textSize="18sp"
        android:id="@+id/tv_output"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:text="@string/dummy_text" />
</LinearLayout>
