<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20.0sp">

        <TextView
            android:id="@id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:fontFamily="@font/amiko"
            android:gravity="center"
            android:text="@string/register_here"
            android:textColor="@color/rideshare"
            android:textSize="35.0sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.425"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Fullnamet"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25.0dip"
            android:backgroundTint="@color/rideshare"
            android:hint="@string/full_name"
            app:boxStrokeColor="@color/rideshare"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperTextTextColor="#fff44336"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView6"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:startIconTint="@color/input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Fullname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Full_Name"
                android:textColor="@color/input" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Usernamet"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rideshare"
            android:hint="@string/username"
            android:textColorHint="#ff484848"
            app:boxStrokeColor="@color/rideshare"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperTextTextColor="#fff44336"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fullnamet"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:startIconTint="@color/input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/input" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_not"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rideshare"
            android:hint="@string/phone_no"
            android:textColorHint="@color/input"
            app:boxStrokeColor="@color/rideshare"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_lock_24"
            app:helperTextTextColor="#fff44336"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Usernamet"
            app:startIconDrawable="@drawable/baseline_call_24"
            app:startIconTint="@color/input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_no"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/input" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/emailt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rideshare"
            android:hint="@string/Email"
            android:textColorHint="#ff484848"
            app:boxStrokeColor="@color/rideshare"
            app:counterMaxLength="40"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_outline_24"
            app:helperTextTextColor="#fff44336"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_not"
            app:startIconDrawable="@drawable/baseline_email_24"
            app:startIconTint="@color/input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/input" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/passwordt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rideshare"
            android:hint="@string/Password"
            android:textColorHint="@color/input"
            app:boxStrokeColor="@color/rideshare"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_outline_24"
            app:helperTextTextColor="#fff44336"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailt"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:startIconTint="@color/input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/input" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmpasswordt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rideshare"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/input"
            app:boxStrokeColor="@color/rideshare"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_outline_24"
            app:helperTextTextColor="#fff44336"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordt"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:startIconTint="@color/input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/input" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@id/register"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginTop="16.0dip"
            android:backgroundTint="@color/rideshare"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="15.0sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmpasswordt" />

        <TextView
            android:id="@+id/already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16.0dip"
            android:fontFamily="sans-serif-medium"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/rideshare"
            android:textSize="18.0sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>